--- a/Problem 5/Problem5.html
+++ b/Problem 5/Problem5.html
@@ -12,8 +12,8 @@
 			<ul class="menu">
 				<li class="active"><a href="">Trang chủ</a></li>
 				<li><a href="">Khoa CNTT</a></li>
-				<li>
-					<a href="">Chương trình đào tạo <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+				<li class="list">
+					<a href="">Chương trình đào tạo</a>
 					<ul class="sub-menu" >
 						<li><a href="">Ngành Kỹ thuật phần mềm</a></li>
 						<li><a href="">Ngành Mạng máy tính và Truyền thông dữ liệu</a></li>
@@ -23,8 +23,8 @@
 				<li><a href="">Tin tức</a></li>
 				<li><a href="">Sự kiện</a></li>
 				<li><a href="">Nghiên cứu khoa học</a></li>
-				<li>
-					<a href="">Giáo vụ <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+				<li class="list">
+					<a href="">Giáo vụ</a>
 					<ul class="sub-menu">
 						<li><a href="">Biểu mẫu cho sinh viên</a></li>
 						<li><a href="">Thông báo học vụ</a></li>
